--- a/src/sass/_imageSearchApp.scss
+++ b/src/sass/_imageSearchApp.scss
@@ -51,7 +51,7 @@ body {
 
 .gallery {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   margin: 20px 25px;
 }
@@ -59,7 +59,7 @@ body {
 .photo-card {
   flex-flow: column;
   flex-wrap: wrap;
-  margin-right: 20px;
+  // margin-right: 20px;
 }
 
 .photo-card:last-child {
